# owlspace_map

./: .gitignore  .sectormap.json  README.md
.github/workflows/: guards.yml
bug-regression-catalog/: SKILL.md  catalog.yaml
bug-regression-catalog/scripts/: load_catalog.py  new_bug_id.py  run_chaos_phase.sh  test_failed_session_render.sh  test_load_catalog.py
docs/: 0001-realtime-sector-map.md  code-graph-comparison.md  no-new-bugs-system.md
docs/specs/: 2026-06-09-align-global-rules-to-klik-docs-design.md  2026-06-10-map-improvement-plan.md
no-bugs-first/: SKILL.md  self_update.sh
no-bugs-first/references/: layouts.md  map-integration.md
no-bugs-first/templates/: ci-success-bridge.sh  ci-success.yml  sectormap.example.json  woodpecker-ci.yaml
no-new-bugs/: SKILL.md  self_update.sh
no-new-bugs/references/: sector-map.md
production-rules-checker/: README.md  ci-template.yml
production-rules-checker/references/: bug_catalog.md  full_rules.md
scripts/: check-vendor-sync.sh  check_doctrine_ci_scaffold.py  check_producer_gates.py  check_simulation_contract_skill_refs.py  install_skill_symlink.sh  test_check_doctrine_ci_scaffold.py  test_check_producer_gates.py  test_check_simulation_contract_skill_refs.py  test_doctrine_self_update.py  test_install_skill_symlink.py
sector_map/: cli.py  collectors.py  dashboard.html  extract.py  graphify_ingest.py  pyproject.toml  requirements.txt  scip_ingest.py  sectormap  server.py  test_cli.py  test_collectors.py  test_extract.py
sector_map/profiles/: klik.json
sector_map/tests_data/: real.scip
(+14 files in other folders)
